# intent-classification

./: Dockerfile  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
notebooks/examples/: bespin-global_klue-roberta-small-3i4k-intent-classification.ipynb  gg4ever_intent-classification-korean.ipynb  klue_roberta-base.ipynb  meta-llama_Meta-Llama-3-8B.ipynb  qanastek_XLMRoberta-Alexa-Intents-Classification.ipynb
