[tool.poetry]
name = "intent-classification"
version = "0.1.0"
description = "Intent classification"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numpy = "^1.26.4"
transformers = "^4.40.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
